MAM: public_html version2 (add references)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Favicons -->
     <link href="assets\img/logo.svg" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/Capture.PNG" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -46,18 +46,20 @@
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <a href="\index" class="logo d-none d-lg-block">
-                <ul style="list-style: none; display: flex; flex-direction: column; align-items: center;">
-                    <li><img src="assets\img/logo.svg" alt="logo" class="img-fluid" style="width: 90px; height: 70px;"></li>
-                    <li style="color:#1c79cbbd; font-family: Anton; font-size: 15px; letter-spacing: 2px; padding: 5px; max-height: 40px;"><b>M.A.M ENGINEERING</b></li>
-                    <li style="color:rgb(174, 175, 178); font-size: 8px; max-height: 40px;"><b>BUREAU D'ÉTUDES TECHNIQUES</b></li>
-                </ul>
-            </a>
             <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+            <!-- <a href="index" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
             <nav class="nav-menu d-none d-lg-block">
-                <ul>
+                <ul class="container d-flex align-items-center justify-content-center">
+                    <li>
+                        <a href="\index" class="logo d-none d-lg-block pr-5">
+                            <ul style="list-style: none; display: flex; flex-direction: column; align-items: center;">
+                                <li><img src="assets\img/logo.svg" alt="logo" class="img-fluid" style="width: 90px; height: 70px;"></li>
+                                <li style="color:#1c79cbbd; font-faMIly: Anton; font-size: 15px; letter-spacing: 2px; padding: 5px; max-height: 40px;"><b>M.A.M ENGINEERING</b></li>
+                                <li style="color:rgb(174, 175, 178); font-size: 8px; max-height: 40px;"><b>BUREAU D'ÉTUDES TECHNIQUES</b></li>
+                            </ul>
+                        </a>
+                    </li>
                     <li class="#"><a href="index">ACCUEIL</a></li>
                     <li><a href="#about">PRÉSENTATION</a></li>
                     <li class="drop-down"><a href="">DOMAINES D'ACTIVITÉS</a>
@@ -68,12 +70,13 @@
                         </ul>
                     </li>
                     <li><a href="/mission">MISSIONS</a></li>
+                    <!-- <li><a href="/mission">SOUS-TRAITANCE</a></li> -->
+                    <li><a href="/references">RÉFÉRENCES</a></li>
+                    <!-- <li></li> -->
                 </ul>
             </nav>
             <!-- .nav-menu -->
-
             <a href="contact" class="get-started-btn scrollto">Contact</a>
-
         </div>
     </header>
     <!-- End Header -->
@@ -83,10 +86,42 @@
         <div class="container" data-aos="fade-up">
 
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
-                <div class="col-xl-6 col-lg-8">
+                <!-- <div class="col-xl-6 col-lg-8">
                     <h1>L'INGENIERIE EST UN ART</h1>
                     <h6 style="color: #fff;">La créativité en ligne de fond, chez M.A.M ENGINEERING on considère l’Ingénierie comme un Art à part entière.</h6>
-                </div>
+                </div> -->
+                <!-- ======= Testimonials2 Section ======= -->
+                <section id="testimonials2" class="testimonials2">
+                    <div class="container" data-aos="zoom-in">
+
+                        <div class="owl-carousel testimonials-carousel">
+                            <div class="testimonial-item">
+                                <h1>PREMIER PARTENAIRE DES BUREAUX D'ÉTUDES FRANÇAIS</h1>
+                                <br>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i> M.A.M ENGINEERING travaille comme sous-traitant des plus grands bureaux d'etude structure en France.
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                            </div>
+                            <div class="testimonial-item">
+                                <h3>L'INGENIERIE EST UN ART</h3>
+                                <br>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i> M.A.M ENGINEERING met en place une gestion et une vision technique ad hoc, optimisant ainsi la réussite du projet confié, dans le respect des règles de sécurité.
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                            </div>
+                            <div class="testimonial-item">
+                                <h3>LA SATISFACTION DE NOS CLIENTS EST L'OBJECTIF PREMIER DE NOS PROJETS</h3>
+                                <br>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i> Nous mettons en ouvre des procédures suivi et d'amélioration continue rigoureuses afin de s'assurer que nous répondons aux exigences mission qui nous sont confiées.
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
 
             <div class="row mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
@@ -303,8 +338,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-info">
                             <p>
-                                <strong>Adresse:</strong> <br> <i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; 16 Lotissement Al-manbat DenDen 2051<br><i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Bureau de liaison Ile de France <br>
-                                <strong>Phone:</strong> <br><i class="bx bxs-phone-call" style="color: dodgerblue;"></i> &nbsp; 0185158334 <br>
+                                <strong>Adresse:</strong> <br> <i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Immeuble n°2 appart A01, Rue El Ikhouane haffouz, Denden<br><i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Bureau de liaison Ile de France<br>
+                                <strong>Phone:</strong> <br><i class="bx bxs-phone-call" style="color: dodgerblue;"></i> &nbsp; 0186618088 <br>
                                 <strong>Email:</strong> <br><i class="bx bxs-envelope" style="color: dodgerblue;"></i> &nbsp; contact@mam-engineering-bet.com <br>
                             </p>
                             <div class="social-links mt-3">
@@ -322,6 +357,7 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Accueil</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="index#about">Présentation</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="mission">Missions</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="references">Références</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="contact">Contact</a></li>
                         </ul>
                     </div>
@@ -335,7 +371,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <a href="index.html" class="logo d-none d-lg-block">
+                        <a href="index" class="logo d-none d-lg-block">
                             <ul style="list-style: none; display: flex; flex-direction: column; align-items:center;">
                                 <li><img src="assets\img/logo.svg" alt="logo" class="img-fluid" style="width: 100px; height: 120px;"></li>
                                 <li style="color:#1c79cbbd; font-family: Anton; font-size: 22px; letter-spacing: 2px; padding: 5px; max-height: 40px;">M.A.M ENGINEERING</li>
