--- a/industriel_commerciaux.html
+++ b/industriel_commerciaux.html
@@ -11,7 +11,7 @@
 
     <!-- Favicons -->
     <link href="assets\img/logo.svg" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/Capture.PNG" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -67,6 +67,7 @@
                         </ul>
                     </li>
                     <li><a href="mission">MISSIONS</a></li>
+                    <li><a href="references">RÉFÉRENCES</a></li>
                 </ul>
             </nav>
             <!-- .nav-menu -->
@@ -162,8 +163,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-info">
                             <p>
-                                <strong>Adresse:</strong> <br> <i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; 16 Lotissement Al-manbat DenDen 2051<br><i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Bureau de liaison Ile de France<br>
-                                <strong>Phone:</strong> <br><i class="bx bxs-phone-call" style="color: dodgerblue;"></i> &nbsp; 0185158334 <br>
+                                <strong>Adresse:</strong> <br> <i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Immeuble n°2 appart A01, Rue El Ikhouane haffouz, Denden<br><i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Bureau de liaison Ile de France<br>
+                                <strong>Phone:</strong> <br><i class="bx bxs-phone-call" style="color: dodgerblue;"></i> &nbsp; 0186618088 <br>
                                 <strong>Email:</strong> <br><i class="bx bxs-envelope" style="color: dodgerblue;"></i> &nbsp; contact@mam-engineering-bet.com <br>
                             </p>
                             <div class="social-links mt-3">
@@ -181,6 +182,7 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="index">Accueil</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="index#about">Présentation</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="mission">Missions</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="references">Références</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="contact">Contact</a></li>
                         </ul>
                     </div>
@@ -194,7 +196,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <a href="index.html" class="logo d-none d-lg-block">
+                        <a href="index" class="logo d-none d-lg-block">
                             <ul style="list-style: none; display: flex; flex-direction: column; align-items:center;">
                                 <li><img src="assets\img/logo.svg" alt="logo" class="img-fluid" style="width: 100px; height: 120px;"></li>
                                 <li style="color:#1c79cbbd; font-family: Anton; font-size: 22px; letter-spacing: 2px; padding: 5px; max-height: 40px;">M.A.M ENGINEERING</li>
