--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <!-- Favicons -->
     <link href="assets\img/logo.svg" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/Capture.PNG" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -67,6 +67,7 @@
                         </ul>
                     </li>
                     <li><a href="/mission">MISSIONS</a></li>
+                    <li><a href="/references">RÉFÉRENCES</a></li>
                 </ul>
             </nav>
             <!-- .nav-menu -->
@@ -100,7 +101,7 @@
                             <div class="address">
                                 <i class="icofont-google-map"></i>
                                 <h4>Adresse:</h4>
-                                <p>16 Lotissement Al-manbat DenDen 2051<br> </p>
+                                <p>Immeuble n°2 appart A01, Rue El Ikhouane haffouz, Denden<br> </p>
                             </div>
                             <br>
                             <div class="address">
@@ -118,7 +119,7 @@
                             <div class="phone">
                                 <i class="icofont-phone"></i>
                                 <h4>Téléphone:</h4>
-                                <p>0185158334</p>
+                                <p>0186618088</p>
                             </div>
 
                         </div>
@@ -130,28 +131,28 @@
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                             <div class="form-row">
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Votre Nom" data-rule="minlen:4" data-msg="Veuillez saisir au moins 4 caractères" />
+                                    <input disabled type="text" name="name" class="form-control" id="name" placeholder="Votre Nom" data-rule="minlen:4" data-msg="Veuillez saisir au moins 4 caractères" />
                                     <div class="validate"></div>
                                 </div>
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="prenom" class="form-control" id="prenom" placeholder="Votre Prénom" data-rule="minlen:4" data-msg="Veuillez saisir au moins 4 caractères" />
+                                    <input disabled type="text" name="prenom" class="form-control" id="prenom" placeholder="Votre Prénom" data-rule="minlen:4" data-msg="Veuillez saisir au moins 4 caractères" />
                                     <div class="validate"></div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="tel" class="form-control" name="phone" id="phone" placeholder="Votre Numéro de téléphone" data-rule="minlen:8" data-msg="Veuillez saisir un Numéro valide" />
+                                <input disabled type="tel" class="form-control" name="phone" id="phone" placeholder="Votre Numéro de téléphone" data-rule="minlen:8" data-msg="Veuillez saisir un Numéro valide" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Votre Email" data-rule="email" data-msg="Veuillez saisir une adresse e-mail valide" />
+                                <input disabled type="email" class="form-control" name="email" id="email" placeholder="Votre Email" data-rule="email" data-msg="Veuillez saisir une adresse e-mail valide" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Sujet" data-rule="minlen:4" data-msg="Veuillez saisir au moins 8 caractères de sujet" />
+                                <input disabled type="text" class="form-control" name="subject" id="subject" placeholder="Sujet" data-rule="minlen:4" data-msg="Veuillez saisir au moins 8 caractères de sujet" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="S'il vous plaît écrivez quelque chose pour nous" placeholder="Message"></textarea>
+                                <textarea disabled class="form-control" name="message" rows="5" data-rule="required" data-msg="S'il vous plaît écrivez quelque chose pour nous" placeholder="Message"></textarea>
                                 <div class="validate"></div>
                             </div>
                             <div class="mb-3">
@@ -179,8 +180,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-info">
                             <p>
-                                <strong>Adresse:</strong> <br> <i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; 16 Lotissement Al-manbat DenDen 2051 <br><i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp;  Bureau de liaison Ile de France <br>
-                                <strong>Phone:</strong> <br><i class="bx bxs-phone-call" style="color: dodgerblue;"></i> &nbsp; 0185158334 <br>
+                                <strong>Adresse:</strong> <br> <i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Immeuble n°2 appart A01, Rue El Ikhouane haffouz, Denden<br><i class="bx bxl-periscope" style="color: dodgerblue;"></i> &nbsp; Bureau de liaison Ile de France<br>
+                                <strong>Phone:</strong> <br><i class="bx bxs-phone-call" style="color: dodgerblue;"></i> &nbsp; 0186618088 <br>
                                 <strong>Email:</strong> <br><i class="bx bxs-envelope" style="color: dodgerblue;"></i> &nbsp; contact@mam-engineering-bet.com <br>
                             </p>
                             <div class="social-links mt-3">
@@ -198,6 +199,7 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Accueil</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="index#about">Présentation</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="mission">Missions</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="references">Références</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="contact">Contact</a></li>
                         </ul>
                     </div>
@@ -211,7 +213,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <a href="index.html" class="logo d-none d-lg-block">
+                        <a href="index" class="logo d-none d-lg-block">
                             <ul style="list-style: none; display: flex; flex-direction: column; align-items:center;">
                                 <li><img src="assets\img/logo.svg" alt="logo" class="img-fluid" style="width: 100px; height: 120px;"></li>
                                 <li style="color:#1c79cbbd; font-family: Anton; font-size: 22px; letter-spacing: 2px; padding: 5px; max-height: 40px;">M.A.M ENGINEERING</li>
